<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_navigation</name>
  <version>1.2.6</version>
  <description>
    The turtlebot3_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_navigation</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>

  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <build_depend>base_local_planner</build_depend>

  <build_depend>control_toolbox</build_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>costmap_2d</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_depend>nav_core</build_depend>

  <build_depend>nav_msgs</build_depend>

  <build_depend>pluginlib</build_depend>

  <build_depend>roscpp</build_depend>

  <build_depend>tf</build_depend>

  <build_depend>tf_conversions</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend> 


  <exec_depend>base_local_planner</exec_depend>

  <exec_depend>control_toolbox</exec_depend>

  <exec_depend>costmap_2d</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>nav_core</exec_depend>

  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>pluginlib</exec_depend>

  <exec_depend>roscpp</exec_depend>

  <exec_depend>tf</exec_depend>

  <exec_depend>tf_conversions</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
